--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(COMMON_CMAKE_CACHE_ARGS
 	#-DCMAKE_FIND_USE_CMAKE_ENVIRONMENT_PATH:BOOL=OFF
 	#-DCMAKE_FIND_USE_SYSTEM_ENVIRONMENT_PATH:BOOL=OFF
 )
-
+#[[
 ExternalProject_Add(
 	ZLIB
 	GIT_REPOSITORY https://github.com/madler/zlib.git
@@ -24,6 +24,7 @@ ExternalProject_Add(
 	CMAKE_CACHE_ARGS
 		${COMMON_CMAKE_CACHE_ARGS}
 )
+#]]
 
 ExternalProject_Add(
 	CLANG
@@ -33,16 +34,16 @@ ExternalProject_Add(
 	SOURCE_SUBDIR llvm
 	CMAKE_CACHE_ARGS
 		${COMMON_CMAKE_CACHE_ARGS}
-		-DLLVM_INSTALL_TOOLCHAIN_ONLY:BOOL=ON
-		-DLLVM_DEFAULT_TARGET_TRIPLE:STRING=arm-linux-gnueabihf
-		-DLLVM_ENABLE_PROJECTS:STRING=clang lld # lldb
+		-DLLVM_ENABLE_PROJECTS:STRING=clang lld
 		-DLLVM_TARGETS_TO_BUILD:STRING=ARM
+		-DLLVM_DEFAULT_TARGET_TRIPLE:STRING=arm-linux-gnueabihf
 		-DLLVM_ENABLE_RUNTIMES:STRING=libcxx libcxxabi libunwind
+		#-DLLVM_INSTALL_TOOLCHAIN_ONLY:BOOL=ON
 		#-DCMAKE_CXX_FLAGS:STRING=-O3 -fno-pic
 		#-DCMAKE_C_FLAGS:STRING=-O3 -fno-pic
 		#-DLLVM_ENABLE_RUNTIMES:STRING=
 		#-DLLVM_RUNTIME_TARGETS:STRING=arm-linux-gnueabihf
-		-DBUILD_SHARED_LIBS:BOOL=OFF
+		#-DBUILD_SHARED_LIBS:BOOL=OFF
 		#-DCLANG_DEFAULT_CXX_STDLIB = libc++
 		#-DLLVM_ENABLE_LIBCXX:BOOL=OFF
 		#-DLIBCXX_ENABLE_STATIC:BOOL=ON
@@ -52,7 +53,7 @@ ExternalProject_Add(
 		#-DLIBUNWIND_ENABLE_SHARED:BOOL=OFF
 		#-G Ninja 
 		#-DCMAKE_INSTALL_PREFIX=$PATH_CLANG 
-	DEPENDS
-		ZLIB
+	#DEPENDS
+		#ZLIB
 		
 )
