--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,23 +37,29 @@ ExternalProject_Add(
 		-DLLVM_ENABLE_PROJECTS:STRING=clang lld
 		-DLLVM_TARGETS_TO_BUILD:STRING=ARM
 		-DLLVM_DEFAULT_TARGET_TRIPLE:STRING=arm-linux-gnueabihf
-		-DLLVM_ENABLE_RUNTIMES:STRING=libcxx libcxxabi libunwind
-		#-DLLVM_INSTALL_TOOLCHAIN_ONLY:BOOL=ON
+		-DLLVM_ENABLE_RUNTIMES:STRING=libunwind libcxx libcxxabi
+		#-DLLVM_ENABLE_RUNTIMES:STRING=
+		-DLLVM_RUNTIME_TARGETS:STRING=arm-linux-gnueabihf
+		-DLLVM_INSTALL_TOOLCHAIN_ONLY:BOOL=ON
+		#-DC_INCLUDE_DIRS:STRING=
+		#-DLIBUNWIND_ENABLE_SHARED:BOOL=OFF
+		#-DLIBCXX_ENABLE_SHARED:BOOL=OFF
+		#-DLIBCXXABI_ENABLE_SHARED:BOOL=OFF
+		-DLLVM_ENABLE_RTTI:BOOL=ON
+		-DLLVM_ENABLE_EH:BOOL=ON
+
 		#-DCMAKE_CXX_FLAGS:STRING=-O3 -fno-pic
 		#-DCMAKE_C_FLAGS:STRING=-O3 -fno-pic
 		#-DLLVM_ENABLE_RUNTIMES:STRING=
-		#-DLLVM_RUNTIME_TARGETS:STRING=arm-linux-gnueabihf
 		#-DBUILD_SHARED_LIBS:BOOL=OFF
 		#-DCLANG_DEFAULT_CXX_STDLIB = libc++
 		#-DLLVM_ENABLE_LIBCXX:BOOL=OFF
 		#-DLIBCXX_ENABLE_STATIC:BOOL=ON
-		#-DLIBCXX_ENABLE_SHARED:BOOL=OFF
 		#-DBUILD_SHARED_LIBS=OFF
 		#-DCLANG_DEFAULT_RTLIB = compiler-rt
 		#-DLIBUNWIND_ENABLE_SHARED:BOOL=OFF
 		#-G Ninja 
 		#-DCMAKE_INSTALL_PREFIX=$PATH_CLANG 
 	#DEPENDS
-		#ZLIB
-		
+	#	ZLIB
 )
