5: -DLLVM_ENABLE_PER_TARGET_RUNTIME_DIR:BOOL=OFF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,15 +38,16 @@ ExternalProject_Add(
 		-DLLVM_TARGETS_TO_BUILD:STRING=ARM
 		-DLLVM_DEFAULT_TARGET_TRIPLE:STRING=arm-linux-gnueabihf
 		-DLLVM_ENABLE_RUNTIMES:STRING=libunwind libcxx libcxxabi
-		#-DLLVM_ENABLE_RUNTIMES:STRING=
 		-DLLVM_RUNTIME_TARGETS:STRING=arm-linux-gnueabihf
+		#-DLLVM_ENABLE_RUNTIMES:STRING=
 		-DLLVM_INSTALL_TOOLCHAIN_ONLY:BOOL=ON
+		-DLLVM_ENABLE_PER_TARGET_RUNTIME_DIR:BOOL=OFF
 		#-DC_INCLUDE_DIRS:STRING=
 		#-DLIBUNWIND_ENABLE_SHARED:BOOL=OFF
 		#-DLIBCXX_ENABLE_SHARED:BOOL=OFF
 		#-DLIBCXXABI_ENABLE_SHARED:BOOL=OFF
-		-DLLVM_ENABLE_RTTI:BOOL=ON
-		-DLLVM_ENABLE_EH:BOOL=ON
+		#-DLLVM_ENABLE_RTTI:BOOL=ON
+		#-DLLVM_ENABLE_EH:BOOL=ON
 
 		#-DCMAKE_CXX_FLAGS:STRING=-O3 -fno-pic
 		#-DCMAKE_C_FLAGS:STRING=-O3 -fno-pic
