--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,7 +2,7 @@ name: Build
 on: [push, pull_request]
 jobs:
   Ubuntu_x86_64:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - name: Set up system
       run: sudo apt-get --assume-yes install ninja-build
