--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,14 +30,14 @@ ExternalProject_Add(
 	CLANG
 	GIT_REPOSITORY https://github.com/llvm/llvm-project.git
 	#GIT_TAG b1234ddbe2652aa7948242a57107ca7ab12fd2f8
-	GIT_TAG llvmorg-18.1.8
+	GIT_TAG llvmorg-19.1.3
 	SOURCE_SUBDIR llvm
 	CMAKE_CACHE_ARGS
 		${COMMON_CMAKE_CACHE_ARGS}
 		-DLLVM_ENABLE_PROJECTS:STRING=clang lld
 		-DLLVM_TARGETS_TO_BUILD:STRING=ARM
 		-DLLVM_DEFAULT_TARGET_TRIPLE:STRING=arm-linux-gnueabihf
-		-DLLVM_ENABLE_RUNTIMES:STRING=libunwind libcxx libcxxabi
+		-DLLVM_ENABLE_RUNTIMES:STRING=libunwind libcxxabi libcxx
 		-DLLVM_RUNTIME_TARGETS:STRING=arm-linux-gnueabihf
 		#-DLLVM_ENABLE_RUNTIMES:STRING=
 		-DLLVM_INSTALL_TOOLCHAIN_ONLY:BOOL=ON
