--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,11 +37,12 @@ ExternalProject_Add(
 		-DLLVM_ENABLE_PROJECTS:STRING=clang lld
 		-DLLVM_TARGETS_TO_BUILD:STRING=ARM
 		-DLLVM_DEFAULT_TARGET_TRIPLE:STRING=arm-linux-gnueabihf
-		-DLLVM_ENABLE_RUNTIMES:STRING=libunwind libcxxabi libcxx
+		-DLLVM_ENABLE_RUNTIMES:STRING=compiler-rt libunwind libcxxabi libcxx
 		-DLLVM_RUNTIME_TARGETS:STRING=arm-linux-gnueabihf
 		#-DLLVM_ENABLE_RUNTIMES:STRING=
 		-DLLVM_INSTALL_TOOLCHAIN_ONLY:BOOL=ON
-		-DLLVM_ENABLE_PER_TARGET_RUNTIME_DIR:BOOL=OFF
+		#-DLLVM_ENABLE_PER_TARGET_RUNTIME_DIR:BOOL=OFF
+		
 		#-DC_INCLUDE_DIRS:STRING=
 		#-DLIBUNWIND_ENABLE_SHARED:BOOL=OFF
 		#-DLIBCXX_ENABLE_SHARED:BOOL=OFF
