clang gcc-multilib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,12 +37,26 @@ ExternalProject_Add(
 		-DLLVM_ENABLE_PROJECTS:STRING=clang lld
 		-DLLVM_TARGETS_TO_BUILD:STRING=ARM
 		-DLLVM_DEFAULT_TARGET_TRIPLE:STRING=arm-linux-gnueabihf
-		-DLLVM_ENABLE_RUNTIMES:STRING=compiler-rt libunwind libcxxabi libcxx
+		-DLLVM_ENABLE_RUNTIMES:STRING=libunwind libcxxabi libcxx
 		-DLLVM_RUNTIME_TARGETS:STRING=arm-linux-gnueabihf
 		#-DLLVM_ENABLE_RUNTIMES:STRING=
 		-DLLVM_INSTALL_TOOLCHAIN_ONLY:BOOL=ON
-		#-DLLVM_ENABLE_PER_TARGET_RUNTIME_DIR:BOOL=OFF
-		
+		#-DLIBCXXABI_USE_LLVM_UNWINDER:BOOL=ON
+		#-DDEFAULT_SYSROOT:PATH=/home/jpabst/.gu/platforms/hi3796mv200_vmx/gcc_toolchain/target
+		#-DDEFAULT_SYSROOT:PATH=
+		#-DLIBCXX_CXX_ABI:STRING="libstdc++"
+		#-DLIBCXX_CXX_ABI_INCLUDE_PATHS:PATHS=:~/.gu/platforms/hi3796mv200_vmx/gcc_toolchain/lib/gcc/arm-gcc49-linux-gnueabihf/4.9.4
+		#-DLIBCXX_CXX_ABI_LIBRARY_PATH:PATH
+
+
+		#-DCLANG_ENABLE_BOOTSTRAP:BOOL=ON
+		#-DBOOTSTRAP_CMAKE_BUILD_TYPE:STRING=Release
+		#-DBOOTSTRAP_CLANG_DEFAULT_CXX_STDLIB:STRING=libc++
+		#-DBOOTSTRAP_CLANG_DEFAULT_RTLIB:STRING=compiler-rt
+		#-DBOOTSTRAP_LIBCXX_USE_COMPILER_RT:BOOL=ON
+		#-DBOOTSTRAP_LIBCXXABI_USE_COMPILER_RT:BOOL=ON
+		#-DCLANG_BOOTSTRAP_TARGETS:STRING=install-libunwind install-libcxxabi install-libcxx install-clang install-clang-headers
+	
 		#-DC_INCLUDE_DIRS:STRING=
 		#-DLIBUNWIND_ENABLE_SHARED:BOOL=OFF
 		#-DLIBCXX_ENABLE_SHARED:BOOL=OFF
