--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,4 +18,4 @@ jobs:
       uses: actions/upload-artifact@main
       with:
         name: Ubuntu_x86_64
-        path: ${{github.workspace}}/build/package/*.zip
+        path: ${{github.workspace}}/build/*.tar.Z
