--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,7 +2,7 @@ name: Build
 on: [push, pull_request]
 jobs:
   Ubuntu_x86_64:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - name: Set up system
       run: sudo apt-get --assume-yes install ninja-build gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf clang
@@ -18,4 +18,4 @@ jobs:
       uses: actions/upload-artifact@main
       with:
         name: Ubuntu_x86_64
-        path: ${{github.workspace}}/build/*.tar.Z
+        path: ${{github.workspace}}/build/CLANG-prefix/src/CLANG-build/*.tar.gz
