--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
     - name: Set up system
-      run: sudo apt-get --assume-yes install ninja-build gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf clang
+      run: sudo apt-get --assume-yes install ninja-build clang
     - name: Checkout
       uses: actions/checkout@main
     - name: Configure
